--- a/DeepTrace/appsettings.json
+++ b/DeepTrace/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  
+  "Connections": {
+    "Prometheus": "http://localhost:9090",
+    "MongoDb": "mongodb://localhost:27017"
+  }
 }
