DEEP-30 Export to CSV added

--- a/DeepTrace/DeepTrace.csproj
+++ b/DeepTrace/DeepTrace.csproj
@@ -18,4 +18,8 @@
     <ProjectReference Include="..\PrometheusAPI\PrometheusAPI.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Data\ExportedData\" />
+  </ItemGroup>
+
 </Project>
