DEEP-14 Interval import implemented. Training dialog added. Logging added

--- a/DeepTrace/appsettings.json
+++ b/DeepTrace/appsettings.json
@@ -1,12 +1,12 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Default": "Trace",
+      "Microsoft.AspNetCore": "Information"
     }
   },
   "AllowedHosts": "*",
-  
+
   "Connections": {
     "Prometheus": "http://localhost:9090",
     "MongoDb": "mongodb://localhost:27017"
